--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,34 +1,546 @@
-body{
-    padding: 15px;
+body {
+    margin: 0;
+    font-family: "Inter";
+    font-weight: normal;
+    font-style: normal;
 }
 
-.navbar{
+/* Starting of Top Navbar */
+.top-nav {
+    display: flex;
+    background-color: #2c48a9;
+    color: white;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+.top-nav .nav-item-1 {
+    display: flex;
+    width: 50%;
+}
+
+.top-nav .nav-item-2 {
+    display: flex;
+    width: 50%;
+    justify-content: right;
+    align-items: center;
+    gap: 15px;
+}
+
+.top-nav .nav-item-2 .underline {
+    text-decoration: underline;
+    color: white;
+}
+
+/* Ending of Top Navbar */
+
+.navbar {
     display: flex;
     width: 100%;
     height: 12vh;
     align-items: center;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    margin-bottom: 1%;
 }
 
-.navbar ul{
-    display: flex;
-    
+a {
+    text-decoration: none;
 }
 
-.navlogo{
+
+.navlogo {
     display: flex;
     width: 20%;
-    height: 12vh;
+    height: 100%;
+    padding-left: 3%;
+    align-items: center;
+}
+
+.navlogo a {
+    height: 60%;
+}
+
+.navlogo a img {
+    height: 100%;
 
 }
 
-
-.nav-items{
+.nav-items {
     display: flex;
+    justify-content: center;
     width: 60%;
 }
 
-.login-button{
+.nav-items ul {
     display: flex;
-    width: 20%;
+    text-decoration: none;
+    list-style: none;
+    gap: 15px;
+    justify-content: center;
 }
 
+.navbar .login-button {
+    display: flex;
+    width: 20%;
+    justify-content: right;
+    padding-right: 3%;
+}
+
+.navbar .login-button .login {
+    width: 22vh;
+    height: 6vh;
+    background-color: #2c48a9;
+    color: white;
+    border: 0;
+    border-radius: 20px;
+}
+
+.navbar .login-button .login:hover {
+    background-color: white;
+    color: #2c48a9;
+    border: 1px solid #2c48a9;
+}
+
+.nav-items ul li a {
+    color: black;
+}
+
+.nav-items ul li a:hover {
+    color: #2c48a9;
+}
+
+/* Ending of Navbar */
+
+
+
+/* Starting of Intro Section */
+
+.intro {
+    display: flex;
+    align-items: center;
+    border-top: 3px solid #2c48a9;
+    height: 70vh;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+.intro-logo {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    height: 60%;
+}
+
+.intro .intro-logo img {
+    width: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
+.intro-text {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+}
+
+.intro-text .line {
+    display: block;
+    font-size: 40px;
+}
+
+.intro-text .line-1 {
+    display: block;
+    color: #747988;
+}
+
+.intro .button {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.intro-text .button .button-1 {
+    width: 26vh;
+    height: 6vh;
+    background-color: #912faa;
+    color: white;
+    border: 0;
+    border-radius: 20px;
+}
+
+.intro-text .button .button-2 {
+    width: 26vh;
+    height: 6vh;
+    background-color: #074051;
+    color: white;
+    border: 0;
+    border-radius: 20px;
+}
+
+.intro-text .button .button-1:hover {
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+}
+
+.intro-text .button .button-2:hover {
+    opacity: 0.7;
+}
+
+/* Ending of Intro section */
+
+/* Starting of 4 Boxes */
+
+.boxes .container {
+    display: flex;
+    padding-left: 3%;
+    padding-right: 3%;
+    justify-content: space-between;
+    margin-bottom: 5%;
+}
+
+.boxes .container .box-1 {
+    display: flex;
+    width: 15%;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 1%;
+    border-radius: 20px;
+}
+
+.boxes .container .box-2 {
+    display: flex;
+    width: 15%;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 1%;
+    border-radius: 20px;
+}
+
+.boxes .container .box-3 {
+    display: flex;
+    width: 15%;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 1%;
+    border-radius: 20px;
+}
+
+.boxes .container .box-4 {
+    display: flex;
+    width: 15%;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 1%;
+    border-radius: 20px;
+}
+
+.boxes .container .box-1 .line-1 {
+    display: block;
+    text-align: center;
+}
+
+.boxes .container .box-2 .line-2 {
+    display: block;
+    text-align: center;
+}
+
+.boxes .container .box-3 .line-3 {
+    display: block;
+    text-align: center;
+}
+
+.boxes .container .box-4 .line-4 {
+    display: block;
+    text-align: center;
+    text-wrap: wrap;
+}
+
+.boxes .container :hover {
+    scale: 1.05;
+    transition: 800ms;
+}
+
+/* End of 4 Boxes */
+
+/* Starting of Courses Banner */
+
+.courses-banner .container {
+    display: flex;
+    background-color: #faf3fb;
+    padding-left: 3%;
+    padding-right: 3%;
+    height: 70vh;
+    align-items: center;
+    column-gap: 3%;
+}
+
+.courses-banner .container .info {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+}
+
+.courses-banner .container .banner {
+    display: flex;
+    width: 50%;
+    height: 90%;
+    justify-content: right;
+
+}
+
+.courses-banner .container .banner img {
+    width: 100%;
+    object-fit: contain;
+    object-position: right;
+
+}
+
+.courses-banner .container .info button {
+    height: 7vh;
+    width: 40vh;
+    background-color: #912faa;
+    border: 0;
+    color: white;
+    border-radius: 20px;
+}
+
+.courses-banner .container .info button:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
+
+p {
+    color: #747988;
+}
+
+/* Ending of Courses Banner */
+
+/* Starting of Welcome Section */
+
+.welcome .container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 3%;
+    padding-right: 3%;
+    justify-content: center;
+    align-items: center;
+}
+
+.welcome .container button {
+    height: 7vh;
+    width: 40vh;
+    background-color: #912faa;
+    color: white;
+    border: 0;
+    margin-bottom: 5%;
+    border-radius: 20px;
+}
+
+.welcome .container button:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
+
+/* Ending of Welcome Section */
+
+/* Starting of Differ-Us Section */
+
+
+.differ-us .container-1 {
+    padding-top: 5%;
+    background-color: #faf3fb;
+    padding-left: 3%;
+    padding-right: 3%;
+    align-items: center;
+    padding-bottom: 5%;
+}
+
+.differ-us .container-2 {
+    display: flex;
+    padding-left: 3%;
+    padding-right: 3%;
+    background-color: #faf3fb;
+    text-align: center;
+    line-height: 1.3;
+    column-gap: 3%;
+}
+
+.differ-us .container-2 .box {
+    width: 33%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 5%;
+    padding: 2%;
+    background-color: white;
+}
+
+.differ-us .container-2 .icon {
+    font-size: 30px;
+    color: white;
+    padding: 10%;
+    border-radius: 50%;
+    background-color: #2c48a9;
+}
+
+.differ-us .container-2 .box:hover{
+    transform: translateY(-30px);
+    transition: 800ms ease-in-out;
+}
+/* Ending of Differ Us Section */
+
+
+/* Starting of Embedded Video */
+
+.video .container-1 {
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.video .container-2 {
+    padding-left: 3%;
+    padding-right: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 5%;
+}
+
+.video .container-2 button {
+    height: 7vh;
+    width: 40vh;
+    background-color: #912faa;
+    color: white;
+    border: 0;
+    border-radius: 20px;
+}
+
+.video .container-2 button:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+}
+
+/* Ending of Embedded Video */
+
+/* Starting of Services Section */
+
+
+.services .container-1 {
+    background-color: #faf3fb;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+.services .container-2 {
+    display: flex;
+    background-color: #faf3fb;
+    justify-content: space-between;
+    padding-bottom: 5%;
+    padding-left: 3%;
+    padding-right: 3%;
+}
+
+.services .container-2 .box {
+    display: flex;
+    flex-direction: column;
+    width: 18%;
+    background-color: #912faa;
+    border-radius: 20px;
+}
+
+.services .container-2 p {
+    color: white;
+}
+
+/* Ending of Services Section */
+
+/* Starting of Process Section */
+
+.process .container-1 {
+    display: flex;
+    padding-left: 3%;
+    padding-right: 3%;
+    margin-bottom: 8%;
+}
+
+.process .container-1 #photo {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+}
+
+.process .container-1 #photo img {
+    width: 70%;
+    object-fit: contain;
+}
+
+.process .container-1 #number {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.process .container-1 #number img {
+    height: auto;
+    width: 10%;
+    object-position: center;
+}
+
+.process .container-2 {
+    display: flex;
+    padding-left: 3%;
+    padding-right: 3%;
+    margin-bottom: 8%;
+}
+
+.process .container-2 #photo {
+    display: flex;
+    justify-content: center;
+    width: 50%;
+}
+
+.process .container-2 #photo img {
+    width: 70%;
+    object-fit: contain;
+    object-position: right;
+}
+
+.process .container-2 #number {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.process .container-2 #number img {
+    height: auto;
+    width: 10%;
+    object-position: center;
+}
+
+.three-boxes {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    padding: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.three-boxes:hover{
+    scale: 1.05;
+    transition: 800ms ease-in-out;
+}
